# py-scaffold

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
hehe/: .gitignore  CLAUDE.md  README.md  requirements.txt
hehe/.github/: copilot-instructions.md
hehe/configs/: default.yml
src/py_scaffold/: __init__.py  cli.py  generator.py
src/py_scaffold/templates/: __init__.py  ai_project.py  ai_project.py.backup  backend_api.py  base.py
tests/: test_generator.py
