[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-scaffold-kit"
version = "0.1.0"
description = "A Python CLI tool for generating production-ready project templates"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Drissdo185", email = "dothanhdat185@gmail.com"}
]
keywords = ["cli", "scaffold", "template", "generator", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.990",
]

[project.scripts]
py-scaffold = "py_scaffold.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/py-scaffold"
Repository = "https://github.com/yourusername/py-scaffold"
Issues = "https://github.com/yourusername/py-scaffold/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
